# phl-courts-scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml
phl_courts_scraper/: __init__.py  base.py  scrape.py  utils.py
phl_courts_scraper/court_summary/: __init__.py  core.py  schema.py  utils.py
phl_courts_scraper/docket_sheet/: __init__.py  core.py  schema.py
phl_courts_scraper/new_filings/: __init__.py  core.py  schema.py
phl_courts_scraper/parser/: __init__.py  court_summary.py  pdf.py  utils.py
phl_courts_scraper/portal/: __init__.py  core.py  schema.py
tests/: test_court_summary.py  test_docket_sheet.py  test_new_filings.py  test_parser.py  test_portal.py  test_scrape.py
