[tool.poetry]
name = "phl-courts-scraper"
version = "0.1.1"
description = "A Python utility to scrape docket sheets and court summaries for Philadelphia courts."
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
selenium = "^4.0.0"
pandas = "^1.3.3"
pdfplumber = "^0.5.28"
intervaltree = "^3.1.0"
webdriver-manager = "^3.5.0"
desert = "^2020.11.18"
loguru = "^0.5.3"
beautifulsoup4 = "^4.10.0"
tryagain = "^1.0"
importlib-metadata = "<4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
jupyterlab = "^3.1.18"
ipython = "^7.28.0"
isort = "^5.9.3"
mypy = "^0.930"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
darglint = "^1.8.1"
flake8-black = "^0.2.3"
flake8-docstrings = "^1.6.0"
types-requests = "^2.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
